fix: Website routing and logo stabilization

--- a/index.html
+++ b/index.html
@@ -3,25 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png"
-    href="https://vignette.wikia.nocookie.net/roblox-noticias/images/2/23/Nacion_MX.png/revision/latest?cb=20210515183354&path-prefix=es" />
+  <link rel="icon" type="image/png" href="/nacionmx-postulaciones/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Nación MX - Postulaciones Staff</title>
-
-  <script type="text/javascript">
-    // Single Page Apps for GitHub Pages
-    // https://github.com/rafgraph/spa-github-pages
-    (function (l) {
-      if (l.search[1] === '/') {
-        var decoded = l.search.slice(1).split('&').map(function (s) {
-          return s.replace(/~and~/g, '&')
-        }).join('?');
-        window.history.replaceState(null, null,
-          l.pathname.slice(0, -1) + decoded + l.hash
-        );
-      }
-    }(window.location))
-  </script>
 </head>
 
 <body>
