--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/nacionmx-postulaciones/logo.png" />
+  <link rel="icon" type="image/png" href="logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Nación MX - Postulaciones Staff</title>
+
+  <script type="text/javascript">
+    // Single Page Apps for GitHub Pages
+    // https://github.com/rafgraph/spa-github-pages
+    (function (l) {
+      if (l.search[1] === '/' || l.search.slice(1, 3) === 'p=') {
+        var decoded = l.search.slice(1).split('&').map(function (s) {
+          return s.replace(/~and~/g, '&')
+        }).join('?');
+
+        var path = decoded;
+        if (decoded.slice(0, 2) === 'p=') path = decoded.slice(2);
+
+        window.history.replaceState(null, null,
+          l.pathname.slice(0, -1) + path + l.hash
+        );
+      }
+    }(window.location))
+  </script>
 </head>
 
 <body>
