--- a/public/404.html
+++ b/public/404.html
@@ -10,8 +10,8 @@
     var l = window.location;
     l.replace(
       l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-      l.pathname.split('/').slice(0, 2).join('/') + '/?/' +
-      l.pathname.slice(1).split('/').slice(1).join('/').replace(/&/g, '~and~') +
+      '/' + l.pathname.split('/')[1] + '/?p=/' +
+      l.pathname.split('/').slice(2).join('/') +
       (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
       l.hash
     );
